samples/_failures_safe/1761534284_48d547_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85d35853.c: In function ‘main’:
./samples/SAFE/__tmp_85d35853.c:158:16: error: missing terminating " character
  158 |         printf("Compression ratio: %.1f%%\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_85d35853.c:158:9: error: expected expression at end of input
  158 |         printf("Compression ratio: %.1f%%\n
      |         ^~~~~~
./samples/SAFE/__tmp_85d35853.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85d35853.c:158:9: error: expected declaration or statement at end of input
